--- a/src/main/resources/templates/drivers/index.html
+++ b/src/main/resources/templates/drivers/index.html
@@ -18,7 +18,7 @@
     <tr th:each="driver : ${drivers}">
         <td th:text="${driver.username}"><td>
         <td th:text="${driver.drivingLicense}"></td>
-        <!--<td th:text="${owner.lastName}">Buck</td>-->
+        <!--<td th:text="${driver.cars}">Buck</td>-->
     </tr>
     </tbody>
 
