--- a/src/main/resources/templates/drivers/create.html
+++ b/src/main/resources/templates/drivers/create.html
@@ -10,9 +10,9 @@
     <tr><td></td><td><input type="hidden" id="id" name="id" th:value="${driver.id}"/></td></tr>
     <tr><td>UserName</td><td><input type="text" id="userName" name="userName" th:value="${driver.userName}"/></td></tr>
     <tr><td>Password</td><td><input type="password" id="password" name="password" th:value="${driver.password}"/></td></tr>
-    <tr><td></td><td><input type="hidden" id="licenseId" name="licenseId" th:value="${driver.drivingLicense.id}"/></td></tr>
-    <tr><td>licenseNumber</td><td><input type="text" id="licenseNumber" name="licenseNumber" th:value="${driver.getDrivingLicense().getDate()}"/></td></tr>
-    <tr><td>licenseExpire</td><td><input type="text" id="licenseExpire" name="licenseExpire" th:value="${driver.getDrivingLicense().getExpireDate()}"/></td></tr>
+<!--    <tr><td></td><td><input type="hidden" id="licenseId" name="licenseId" th:value="${driver.drivingLicense.id}"/></td></tr>-->
+<!--    <tr><td>licenseNumber</td><td><input type="text" id="licenseNumber" name="licenseNumber" th:value="${driver.getDrivingLicense().getDate()}"/></td></tr>-->
+<!--    <tr><td>licenseExpire</td><td><input type="text" id="licenseExpire" name="licenseExpire" th:value="${driver.getDrivingLicense().getExpireDate()}"/></td></tr>-->
     <tr><td></td><td> <button type="submit">Zatwierdź</button></td></tr>
 </table>
 </form>
