--- a/src/main/resources/templates/cars/create.html
+++ b/src/main/resources/templates/cars/create.html
@@ -9,8 +9,8 @@
 
 <form th:action="@{/cars/create}" method="POST" th:object="${car}">
     <table>
-        <tr><td>Brand:</td><td><input type="text" id="brad" name="brand" th:value="${car.brand}"/></td></tr>
-        <tr><td>Model:</td><td><input type="text" id="model" name="surname" th:value="${car.model}"/></td></tr>
+        <tr><td>Brand:</td><td><input type="text" id="brand" name="brand" th:value="${car.brand}"/></td></tr>
+        <tr><td>Model:</td><td><input type="text" id="model" name="model" th:value="${car.model}"/></td></tr>
         <tr><td>Production Year:</td><td><input type="text" id="productionYear" name="productionYear" th:value="${car.productionYear}"/></td></tr>
         <tr><td>Mileage:</td><td><input type="text" id="mileage" name="mileage" th:value="${car.mileage}"/></td></tr>
         <tr><td>Engine Capacity:</td><td><input type="text" id="engineCapacity" name="engineCapacity" th:value="${car.engineCapacity}"/></td></tr>
