issue #52 dodatkowo naprawiłem błąd z driverem, wszystko się ładnie tworzy i wyświetla

--- a/src/main/resources/templates/drivers/index.html
+++ b/src/main/resources/templates/drivers/index.html
@@ -17,7 +17,7 @@
     <tbody>
     <tr th:each="driver : ${drivers}">
         <td th:text="${driver.userName}"><td>
-        <td th:text="${driver.drivingLicenseDto.number}"></td>
+        <td th:text="${driver.drivingLicenseDto}"></td>
         <!--<td th:text="${driver.cars}">Buck</td>-->
     </tr>
     </tbody>
