--- a/src/main/resources/templates/cars/details.html
+++ b/src/main/resources/templates/cars/details.html
@@ -23,6 +23,7 @@
         <td><span th:text="${car.engineCapacity}"/></td>
         <td><a th:href="@{../edit?id=} + ${car.id}">Edytuj</a></td>
         <td><a th:href="@{../delete?id=} + ${car.id}">Usuń</a></td>
+        <td><a th:href="@{../setDriver/} + ${car.id}">Dodaj kierowcę</a></td>
     </tbody>
 
 
