--- a/src/main/resources/templates/drivers/create.html
+++ b/src/main/resources/templates/drivers/create.html
@@ -3,13 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </head>
 <body>
 <form th:action="@{/drivers/create}" method="POST" th:object="${driver}">
-<table>
-    <tr><td></td><td><input type="hidden" id="id" name="id" th:value="${driver.id}"/></td></tr>
-    <tr><td>UserName</td><td><input type="text" id="userName" name="userName" th:value="${driver.userName}"/></td></tr>
-    <tr><td>Password</td><td><input type="password" id="password" name="password" th:value="${driver.password}"/></td></tr>
+<table class="table">
+    <tr scope="row"><td></td><td><input type="hidden" id="id" name="id" th:value="${driver.id}"/></td></tr>
+    <tr scope="row"><td>UserName</td><td><input type="text" id="userName" name="userName" th:value="${driver.userName}"/></td></tr>
+    <tr scope="row"><td>Password</td><td><input type="password" id="password" name="password" th:value="${driver.password}"/></td></tr>
 <!--    <tr><td></td><td><input type="hidden" id="licenseId" name="licenseId" th:value="${drivingLicenseDto.id}"/></td></tr>-->
 <!--    <tr><td>licenseNumber</td><td><input type="text" id="licenseNumber" name="licenseNumber" th:value="${drivingLicenseDto.number}"/></td></tr>-->
 <!--    <tr><td>licenseExpire</td><td><input type="text" id="licenseExpire" name="licenseExpire" th:value="${drivingLicenseDto.expireDate()}"/></td></tr>-->
