poprawiłem obsługę wyjątku, pododwałąem linki i stronę głowną, żeby to jakoś obsługiwać, dodałem zabezpieczenia poszczególnych endpointów, zmieniłem przy tym nazwę roli na ROLE_DRIVER, po zalogowaniu kierowca może majstrować tylko przy swoich rachunkach oraz prawie jazdy. usunąłem tworzenie drivera inaczej niż przez formularze rejestracji, działają wszystkie akcje samochodów, kilka rzeczy ogólnie zostało

--- a/src/main/resources/templates/cars/details.html
+++ b/src/main/resources/templates/cars/details.html
@@ -21,9 +21,10 @@
         <td><span th:text="${car.productionYear}"/></td>
         <td><span th:text="${car.mileage}"/></td>
         <td><span th:text="${car.engineCapacity}"/></td>
-        <td><a th:href="@{../edit?id=} + ${car.id}">Edytuj</a></td>
-        <td><a th:href="@{../delete?id=} + ${car.id}">Usuń</a></td>
-        <td><a th:href="@{../setDriver/} + ${car.id}">Dodaj kierowcę</a></td>
+        <td><a th:href="@{../edit?id=} + ${car.id}">Edit</a></td>
+        <td><a th:href="@{../delete?id=} + ${car.id}">Delete</a></td>
+        <td><a th:href="@{../setDriver/} + ${car.id}">Add Driver</a></td>
+        <td><a th:href="@{../setTechnicalInspection?id=} + ${car.id}">Set Date of Next Technical Inspection</a></td>
     </tbody>
 
 
