--- a/src/main/resources/templates/drivers/addBill.html
+++ b/src/main/resources/templates/drivers/addBill.html
@@ -6,7 +6,7 @@
 </head>
 <form th:action="@{/drivers/addBill}" method="POST" th:object="${assignment}">
     <table>
-        <tr><td></td><td><input type="hidden" id="driverId" name="driverId" th:value="${driverId}"/></td></tr>
+        <tr><td></td><td><input type="hidden" id="userId" name="userId" th:value="${userId}"/></td></tr>
 
         <tr><td>Date</td><td><input type="date" id="date" name="date" th:value="${date}"/></td></tr>
         <tr><td>Value</td><td><input type="text" id="value" name="value" th:value="${value}"/></td></tr>
