--- a/src/main/resources/templates/drivers/setDrivingLicense.html
+++ b/src/main/resources/templates/drivers/setDrivingLicense.html
@@ -6,7 +6,7 @@
 </head>
 <form th:action="@{/drivers/setDrivingLicense}" method="POST" th:object="${assignment}">
     <table>
-        <tr><td></td><td><input type="hidden" id="driverId" name="driverId" th:value="${driverId}"/></td></tr>
+        <tr><td></td><td><input type="hidden" id="userId" name="userId" th:value="${userId}"/></td></tr>
 
         <tr><td>Expire Date</td><td><input type="date" id="expireDate" name="expireDate" th:value="${expireDate}"/></td></tr>
         <tr><td>Number</td><td><input type="text" id="number" name="number" th:value="${number}"/></td></tr>
