--- a/src/main/resources/templates/drivers/preparePayment.html
+++ b/src/main/resources/templates/drivers/preparePayment.html
@@ -5,7 +5,7 @@
     <title></title>
 </head>
 <body>
-<a th:text="${value}"> Wartość
+Payment value: <a th:text="${value}">
 
 </a>
 <form th:action="@{/drivers/preparePayment}" method="POST" th:object="${assignment}">
