--- a/src/main/resources/templates/drivers/error.html
+++ b/src/main/resources/templates/drivers/error.html
@@ -8,7 +8,7 @@
 <h1></h1>
 
 Ooops... Something went wrong
-<a th:href="@{/index}">Go back to index </a>
+<a th:href="@{../}">Go back to index </a>
 
 
 </body>
