--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -41,10 +41,13 @@
     <a th:href="@{/drivers}">Show all drivers</a>
 </div>
 <div sec:authorize="hasRole('DRIVER')">
-    <a th:href="@{/drivers/setDrivingLicense}">Add driving license</a>
+    <a th:href="@{/drivers/setDrivingLicense}">Set driving license data</a>
 </div>
 <div sec:authorize="hasRole('DRIVER')">
     <a th:href="@{/drivers/addBill}">Add a new petrol bill</a>
+</div>
+<div sec:authorize="hasRole('DRIVER')">
+    <a th:href="@{/drivers/showCars}">Show my cars</a>
 </div>
 
 
