--- a/src/main/resources/templates/drivers/addBill.html
+++ b/src/main/resources/templates/drivers/addBill.html
@@ -11,7 +11,7 @@
         <tr><td>Date</td><td><input type="date" id="date" name="date" th:value="${date}"/></td></tr>
         <tr><td>Value</td><td><input type="text" id="value" name="value" th:value="${value}"/></td></tr>
 
-        <tr><td></td><td> <button type="submit">Zatwierdź</button></td></tr>
+        <tr><td></td><td> <button type="submit">Submit</button></td></tr>
     </table>
 </form>
 
