--- a/src/main/resources/templates/cars/reportAccident.html
+++ b/src/main/resources/templates/cars/reportAccident.html
@@ -9,15 +9,13 @@
 
 <form th:action="@{/cars/reportAccident}" method="POST" th:object="${assignment}">
     <label>Description</label>
-    <textarea>
-        <input type="text" id="description" name="description" th:value="${description}"/>
+    <textarea id="description" name="description" th:value="${description}">
     </textarea>
     <table>
         <tr><td></td><td><input type="hidden" id="driverId" name="driverId" th:value="${driverId}"/></td></tr>
         <tr><td></td><td><input type="hidden" id="carId" name="carId" th:value="${carId}"/></td></tr>
         <tr><td>Date of Accident</td><td><input type="date" id="accidentDate" name="accidentDate" th:value="${accidentDate}"/></td></tr>
 
-        <!--<tr><td>Description</td><td><input type="text" id="description" name="description" th:value="${description}"/></td></tr>-->
 
         <tr><td></td><td> <button type="submit">Submit</button></td></tr>
     </table>
